# OptoTransportAnalysis

./: README.md  environment.yml  pyproject.toml
OptoTransport/: OpticsData.py  TransportData.py
OptoTransportAnalysis/: Optics.py  Transport.py  data.py  environment.yml  opticsData.py  transportData.py  utils.py
src/OptoTransport/: OpticsData.py  environment.yml
src/OptoTransport/tests/: _test_initTransportData.ipynb
src/OptoTransportAnalysis/: Data.py  Optics.py  Transport.py  __init__.py  utils.py
tests/: _test_PracticeWorkingWithDBFiles.ipynb  _test_usingTKInter.ipynb  data_test_suite.py  utils_test_suite.py
