[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["OptoTransportAnalysis*"]

[project]
name = "OptoTransportAnalysis"
version = "0.0.1"
description = "Data analysis programs and infrastructure for use on optics and transport data in Xu lab @ UW"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Jack Barlow", email = "barlowmj@uw.edu"}
]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "pyyaml",
    "scipy",
    "matplotlib",
    "h5py",
    "numpy",
    "imageio",
    "ipykernel",
    "sqlalchemy",
    "flask-sqlalchemy",
    "python-pptx"
]

[project.urls]
"repository" = "https://github.com/barlowmj/OptoTransportAnalysis"

